# embedded-time

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README.tpl  crates-io.md  generate_readme_docs.ps1  rustfmt.toml
.github/workflows/: build.yml  check.yml  ci.yml  clippy.yml  test.yml
.run/: nrf52_dk.run.xml
benches/: duration.rs  duration_vs_rate.rs
examples/: Cargo.toml  isolated-bloat.txt  nRF52832_xxAA.jflash  nrf52_dk-bloat.txt  record_bloat.ps1
examples/isolated/: main.rs
examples/nrf52_dk/: main.rs  nRF52832_xxAA.jflash
examples/nrf52_dk_cyccnt/: main.rs  nRF52832_xxAA.jflash
examples/nrf52_dk_rtfm/: main.rs
examples/nrf52_dk_rtfm_cyccnt/: main.rs
examples/src/: isolated.rs  nrf52_dk.rs
src/: clock.rs  duration.rs  fixed_point.rs  fraction.rs  frequency.rs  instant.rs  integer.rs  lib.rs  numeric_constructor.rs  numerical_duration.rs  numerical_traits.rs  period.rs  rate.rs  ratio.rs  time_int.rs  timer.rs
tests/: duration.rs  fraction.rs  instant.rs  lib.rs  rate.rs  timer.rs
