[package]
name = "embedded-time"
version = "0.5.2"
authors = ["Peter Taylor <PTaylor@FluenTech.info>"]
edition = "2018"
description = "A library for abstracting clocks and handling time(ing) in embedded systems"
keywords = ["time", "Duration", "Instant", "Clock", "Monotonic"]
categories = ["date-and-time", "embedded", "no-std"]
readme = "crates-io.md"
repository = "https://github.com/FluenTech/embedded-time/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.3.0", default-features = false }

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic_rtt = "0.3.0"
nrf52832-hal = { version = "0.10.0", default-features = false, features = ["rt", "xxAA-package"] }
mutex-trait = "0.2.0"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
crossbeam-utils = "0.7.2"

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m", branch = "mutex_add" }
