[package]
name = "embedded-time"
version = "0.8.1"
authors = ["Peter Taylor <PTaylor@FluenTech.info>"]
edition = "2018"
description = "Fully defined, inter-operable, ergonomic, and fast human-time units (both duration and rate types) with hardware timer abstraction and software timers."
keywords = ["Time", "Duration", "Instant", "Clock", "Rate"]
categories = ["date-and-time", "embedded", "no-std"]
readme = "crates-io.md"
repository = "https://github.com/FluenTech/embedded-time/"
license = "MIT OR Apache-2.0"
exclude = ["/.github/"]
autoexamples = false
# The examples must be their own package due to conflicts with the criterion crate.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples"]

[dependencies]
num = { version = "0.3.0", default-features = false }

[dev-dependencies]
crossbeam-utils = "0.7.2"
criterion = "0.3.3"

[[bench]]
name = "duration"
harness = false

[[bench]]
name = "duration_vs_rate"
harness = false
